--- a/app/src/main/res/layout/activity_quantity.xml
+++ b/app/src/main/res/layout/activity_quantity.xml
@@ -6,12 +6,32 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#ff303030"
     tools:context="com.traffic.apptech.guardrailautoquantity.QuantityActivity">
+<FrameLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <fragment
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:name="com.traffic.apptech.guardrailautoquantity.FragmentA"
+        android:id="@+id/fragment"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+    <fragment
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:name="com.traffic.apptech.guardrailautoquantity.FragmentB"
+        android:id="@+id/fragment2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 <LinearLayout
     android:id="@+id/layout_header"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
 
     <Spinner
         android:visibility="gone"
@@ -27,6 +47,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/text_nextsite"
         android:textColor="@color/white"
         android:background="@color/orange"
         android:textSize="20sp"
@@ -124,6 +145,7 @@
 
             </LinearLayout>
         <Button
+            android:onClick="NextSite"
             android:textAlignment="center"
             android:layout_gravity="bottom"
             android:text="Next Site"
@@ -132,5 +154,9 @@
         </LinearLayout>
 
     </LinearLayout>
+</FrameLayout>
+
+
+
 
 </RelativeLayout>
